Added biotable to dashboard

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "46fa49ea-09a0-4e54-9935-3295197b2c0d",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,13 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "import os\n",
+    "import plotly.figure_factory as ff\n",
     "POSTGRES_PASSWORD = os.getenv('POSTGRES_PASSWORD')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "e160af70-3305-47e8-800b-d6f22940993e",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "3b318e9c-e1f8-4c67-a7ce-bea61e1ddd6d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "dcc1d7ea-3277-4576-bcd4-ed06ac556dc5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "5ba5357f-7040-478e-957e-895883073f2a",
    "metadata": {},
    "outputs": [
@@ -102,7 +103,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0xffff64e4bcd0>"
+       "<IPython.lib.display.IFrame at 0xffff22245610>"
       ]
      },
      "metadata": {},
@@ -114,16 +115,69 @@
     "\n",
     "app.layout = html.Div(\n",
     "    [\n",
+    "        # Stuff on top\n",
     "        html.H1(\"Know Your Representatives in Congress\"),\n",
     "        html.H2(\"Data collected from APIs from Congress.gov, Open Secrets, Voteview.com, and Propublica\"),\n",
     "        html.H3(\"DS 6600: Data Engineering 1, UVA Data Science\"),\n",
+    "        \n",
+    "        # Side bar\n",
+    "        html.Div([\n",
+    "            dcc.Markdown('Please select a Representative or Senator'),\n",
+    "            dcc.Dropdown(id = 'member', options = memberlist, value = 'A000370'),\n",
+    "            dcc.Markdown(mymarkdown),\n",
+    "        ], style = {'width': '24%', 'float': 'left'}),\n",
+    "        \n",
+    "        # Main bar\n",
+    "        html.Div([\n",
+    "            dcc.Tabs([\n",
+    "                dcc.Tab(label = 'Biography Info', children = [\n",
+    "                    # stuff for bio tab goes here\n",
+    "                    dcc.Graph(id = 'biotable')\n",
+    "                ]),\n",
+    "                dcc.Tab(label = 'Bill Sponsorship', children = [\n",
+    "                    # stuff for bill sponsorsihp tab goes here\n",
+    "                ]),\n",
+    "                dcc.Tab(label = 'Voting and Ideology', children = [\n",
+    "                    # stuff for voting and ideology tab goes here\n",
+    "                ]),\n",
+    "                dcc.Tab(label = 'Donors and Financial Info', children = [\n",
+    "                    # stuff for donors and financial info tab goes here\n",
+    "                ]),\n",
+    "                \n",
+    "            ])\n",
     "\n",
-    "        dcc.Markdown(mymarkdown),\n",
+    "            \n",
+    "        ], style = {'width': '74%', 'float': 'right'})\n",
     "\n",
-    "        dcc.Dropdown(options = memberlist,\n",
-    "                    value = 'A000370')\n",
+    "\n",
+    "\n",
     "    ]\n",
     ")\n",
+    "\n",
+    "@app.callback([Output(component_id = 'biotable', component_property = 'figure')],\n",
+    "             [Input(component_id = 'member', component_property = 'value')]) \n",
+    "\n",
+    "\n",
+    "def biotable(b):\n",
+    "    myquery = f'''\n",
+    "    SELECT directordername AS Name,\n",
+    "        party AS Party,\n",
+    "        state AS State,\n",
+    "        CAST(district as int) AS District,\n",
+    "        addressinformation_officeaddress AS Address,\n",
+    "        CONCAT (addressinformation_city, ', ', addressinformation_district) AS City,\n",
+    "        addressinformation_zipcode AS Zipcode,\n",
+    "        addressinformation_phonenumber AS Phone\n",
+    "        \n",
+    "    FROM members \n",
+    "    WHERE bioguideid='{b}'\n",
+    "    '''\n",
+    "    mydf = pd.read_sql_query(myquery, con=engine) \n",
+    "    mydf.columns = [x.capitalize() for x in mydf.columns]\n",
+    "    mydf = mydf.T.reset_index()\n",
+    "    mydf = mydf.rename({'index': '', 0:''}, axis = 1)\n",
+    "    ff.create_table(mydf)\n",
+    "    return [ff.create_table(mydf)]\n",
     "\n",
     "if __name__==\"__main__\":\n",
     "    app.run_server(mode= 'external', host = \"0.0.0.0\", debug=True)"
@@ -131,11 +185,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "4f7768f8-3008-43e6-91e0-656918934e90",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def biotable(b):\n",
+    "    myquery = f'''\n",
+    "    SELECT directordername AS Name,\n",
+    "        party AS Party,\n",
+    "        state AS State,\n",
+    "        CAST(district as int) AS District,\n",
+    "        addressinformation_officeaddress AS Address,\n",
+    "        CONCAT (addressinformation_city, ', ', addressinformation_district) AS City,\n",
+    "        addressinformation_zipcode AS Zipcode,\n",
+    "        addressinformation_phonenumber AS Phone\n",
+    "        \n",
+    "    FROM members \n",
+    "    WHERE bioguideid='{b}'\n",
+    "    '''\n",
+    "    mydf = pd.read_sql_query(myquery, con=engine) \n",
+    "    mydf.columns = [x.capitalize() for x in mydf.columns]\n",
+    "    mydf = mydf.T.reset_index()\n",
+    "    mydf = mydf.rename({'index': '', 0:''}, axis = 1)\n",
+    "    ff.create_table(mydf)\n",
+    "    return ff.create_table(mydf)"
+   ]
   }
  ],
  "metadata": {
