--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "46fa49ea-09a0-4e54-9935-3295197b2c0d",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,7 @@
     "import psycopg2\n",
     "import os\n",
     "import plotly.figure_factory as ff\n",
+    "import plotly.express as px\n",
     "POSTGRES_PASSWORD = os.getenv('POSTGRES_PASSWORD')"
    ]
   },
@@ -57,6 +58,55 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "64f17653-24ba-4008-966d-3ae73612cb75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myquery = '''\n",
+    "SELECT bioguideid,\n",
+    "    directordername, \n",
+    "    party,\n",
+    "    ideology,\n",
+    "    state,\n",
+    "    district\n",
+    "FROM members m\n",
+    "'''\n",
+    "\n",
+    "ideo_df = pd.read_sql_query(myquery, con=engine)\n",
+    "ideo_df['chamber'] = ideo_df['district'].isnull()\n",
+    "ideo_df['chamber'] = ideo_df['chamber'].replace({True: 'Senate', False: 'House of Representatives'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cb09441a-b7c9-42f6-b145-28be379147c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ideo_df['namedistrict'] = [n + ' (' + s + ')' if c == 'Senate' \n",
+    "    else n + ' (' + s + '-' + str(int(d)) + ')' \n",
+    "    for n, s, c, d in zip(ideo_df['directordername'], ideo_df['state'], ideo_df['chamber'], ideo_df['district'])\n",
+    "]\n",
+    "ideo_df['party'] = ideo_df['party'].replace({'D': 'Democrat',\n",
+    "                                            'I': 'Independent',\n",
+    "                                            'R': 'Republican'})\n",
+    "\n",
+    "userbioguideid = 'G000595'\n",
+    "ideo2 = ideo_df.query(f\"bioguideid == '{userbioguideid}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f9c8b8-1ae8-4417-acb8-59db1f9c3fa3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c8f7f338-652c-4959-90b1-49deec515684",
    "metadata": {},
    "outputs": [],
@@ -84,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "5ba5357f-7040-478e-957e-895883073f2a",
    "metadata": {},
    "outputs": [
@@ -103,7 +153,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0xffff22245610>"
+       "<IPython.lib.display.IFrame at 0xffff3e8f7310>"
       ]
      },
      "metadata": {},
@@ -130,16 +180,20 @@
     "        # Main bar\n",
     "        html.Div([\n",
     "            dcc.Tabs([\n",
-    "                dcc.Tab(label = 'Biography Info', children = [\n",
+    "                 dcc.Tab(label = 'Biographical Info', children = [\n",
     "                    # stuff for bio tab goes here\n",
-    "                    dcc.Graph(id = 'biotable')\n",
+    "                    html.Div([html.Img(id = 'bioimage', style={'height':'100%', 'width':'100%'})], style = {'width': '24%', 'float':'left'}),\n",
+    "                    html.Div([dcc.Graph(id = 'biotable')], style = {'width': '74%', 'float':'right'})\n",
     "                ]),\n",
+    "                \n",
     "                dcc.Tab(label = 'Bill Sponsorship', children = [\n",
     "                    # stuff for bill sponsorsihp tab goes here\n",
     "                ]),\n",
+    "                \n",
     "                dcc.Tab(label = 'Voting and Ideology', children = [\n",
-    "                    # stuff for voting and ideology tab goes here\n",
+    "                    dcc.Graph(id = 'ideograph', style = {'height': '100%', 'width': '100%'})\n",
     "                ]),\n",
+    "                \n",
     "                dcc.Tab(label = 'Donors and Financial Info', children = [\n",
     "                    # stuff for donors and financial info tab goes here\n",
     "                ]),\n",
@@ -179,13 +233,71 @@
     "    ff.create_table(mydf)\n",
     "    return [ff.create_table(mydf)]\n",
     "\n",
+    "@app.callback([Output(component_id = 'bioimage', component_property = 'src')],\n",
+    "             [Input(component_id = 'member', component_property = 'value')])\n",
+    "\n",
+    "def bioimage(b):\n",
+    "    myquery = f'''\n",
+    "    SELECT depiction_imageurl\n",
+    "    FROM members\n",
+    "    WHERE bioguideid='{b}'\n",
+    "    '''\n",
+    "    mydf = pd.read_sql_query(myquery, con=engine)\n",
+    "    return [mydf['depiction_imageurl'][0]]\n",
+    "\n",
+    "@app.callback([Output(component_id = 'ideograph', component_property = 'figure')],\n",
+    "             [Input(component_id = 'member', component_property = 'value')])\n",
+    "\n",
+    "def ideograph(b): \n",
+    "    ideo2 = ideo_df.query(f\"bioguideid == '{b}'\")\n",
+    "    fig = px.scatter(ideo_df, x='ideology', y='chamber', color='party',\n",
+    "                     color_discrete_map={'Republican': 'red',\n",
+    "                                         'Democrat': 'blue',\n",
+    "                                         'Independent': 'green'},\n",
+    "                     height=300, width=600,\n",
+    "                     labels={'ideology':'Left/Right Ideology (DW-NOMINATE)', \n",
+    "                            'chamber':'Chamber',\n",
+    "                            'party': 'Political Party'},\n",
+    "                     hover_name = 'namedistrict', \n",
+    "                     hover_data=['party'],\n",
+    "                     title = 'Ideological Placements in Congress',\n",
+    "                    opacity = .1)\n",
+    "    \n",
+    "    fig.update(layout=dict(title=dict(x=0.5)))\n",
+    "    fig.update_yaxes(range=(-0.5, 1.5), tickvals=[0, 1],\n",
+    "                    ticktext = ['Senate', 'House of Representatives'])\n",
+    "    fig.update_xaxes(range=(-1,1), tickvals=[-1, -.5, 0, .5, 1],\n",
+    "                    ticktext = ['Extreme left', 'Moderate left', 'Centrist', 'Moderate right', 'Extreme right'])\n",
+    "    \n",
+    "     \n",
+    "    \n",
+    "    fig.add_traces(\n",
+    "        px.scatter(ideo2, x='ideology', y='chamber', color='party',\n",
+    "                     color_discrete_map={'Republican': 'red',\n",
+    "                                         'Democrat': 'blue',\n",
+    "                                         'Independent': 'green'},\n",
+    "                     height=300, width=600,\n",
+    "                     labels={'ideology':'Left/Right Ideology (DW-NOMINATE)', \n",
+    "                            'chamber':'Chamber',\n",
+    "                            'party': 'Political Party'},\n",
+    "                     hover_name = 'namedistrict',\n",
+    "                     hover_data=['party'],\n",
+    "                     title = 'Ideological Placements in Congress').update_traces(marker=dict(size=8, symbol=\"star\", line=dict(width=2, color=\"DarkSlateGrey\")),\n",
+    "                                                                                showlegend=False).data\n",
+    "    )\n",
+    "    \n",
+    "     \n",
+    "    \n",
+    "    \n",
+    "    return [fig]\n",
+    "\n",
     "if __name__==\"__main__\":\n",
     "    app.run_server(mode= 'external', host = \"0.0.0.0\", debug=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "4f7768f8-3008-43e6-91e0-656918934e90",
    "metadata": {},
    "outputs": [],
