Tried and failed to publish bills data

--- a/congressdb.ipynb
+++ b/congressdb.ipynb
@@ -3039,7 +3039,23 @@
    "execution_count": 31,
    "id": "92070088-6718-4f18-be36-abb1093687c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ObjectInUse",
+     "evalue": "database \"congress\" is being accessed by other users\nDETAIL:  There are 4 other sessions using the database.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDuplicateDatabase\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCREATE DATABASE congress\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n",
+      "\u001b[0;31mDuplicateDatabase\u001b[0m: database \"congress\" already exists\n",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mObjectInUse\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m     cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCREATE DATABASE congress\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m----> 4\u001b[0m     \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDROP DATABASE congress\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCREATE DATABASE congress\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mObjectInUse\u001b[0m: database \"congress\" is being accessed by other users\nDETAIL:  There are 4 other sessions using the database.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    cursor.execute('CREATE DATABASE congress')\n",
@@ -3050,7 +3066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "055877de-00c6-4f65-bc3a-6ae117fd42c6",
    "metadata": {},
    "outputs": [],
@@ -3082,28 +3098,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7a4ed34d-c82e-4259-a04d-8fd9e50622a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "530\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "530"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(members.shape[0])\n",
     "members.to_sql('members', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3111,28 +3109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b1a11a55-451d-4743-827d-39543647a85d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "38325\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "38325"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(bills.shape[0])\n",
     "bills.to_sql('bills', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3140,28 +3120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "41f8341f-3db8-4788-843e-0f82cfbce453",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "714\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "714"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(committees.shape[0])\n",
     "committees.to_sql('committees', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3169,28 +3131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "559dd20a-aed5-45f6-9cf6-27c2bc4a64aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3866\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3866"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(committee_members.shape[0])\n",
     "committee_members.to_sql('committee_members', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3198,28 +3142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "c0a94d2f-d69a-4a3d-ab8e-55751eaa839c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "278\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "278"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(terms.shape[0])\n",
     "terms.to_sql('terms', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3227,28 +3153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "ed8b7268-53d9-45e3-895b-aef263b09d68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "79\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "79"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(leadership.shape[0])\n",
     "leadership.to_sql('leadership', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3256,28 +3164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2edc31c3-c1d2-4ed9-af19-7b92e970d422",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1990\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1990"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(os_contributions.shape[0])\n",
     "os_contributions.to_sql('contributions', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3285,28 +3175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a13fc6d6-6b61-4120-961e-dd62f5c9529a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "204138\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "204138"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(votesim.shape[0])\n",
     "votesim.to_sql('votesim', con=engine, index=False, chunksize=1000, if_exists = 'replace')"
@@ -3314,130 +3186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "190f95e3-99a1-45ca-94bc-f18adfe8a8b9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>icpsr</th>\n",
-       "      <th>member_compare</th>\n",
-       "      <th>affinity_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14226</td>\n",
-       "      <td>14435</td>\n",
-       "      <td>0.305147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>14226</td>\n",
-       "      <td>14858</td>\n",
-       "      <td>0.375000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>14226</td>\n",
-       "      <td>14871</td>\n",
-       "      <td>0.352941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>14226</td>\n",
-       "      <td>14921</td>\n",
-       "      <td>0.772059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14226</td>\n",
-       "      <td>15015</td>\n",
-       "      <td>0.356618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204133</th>\n",
-       "      <td>91980</td>\n",
-       "      <td>31101</td>\n",
-       "      <td>0.202532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204134</th>\n",
-       "      <td>91980</td>\n",
-       "      <td>31102</td>\n",
-       "      <td>0.830018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204135</th>\n",
-       "      <td>91980</td>\n",
-       "      <td>31103</td>\n",
-       "      <td>0.169982</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204136</th>\n",
-       "      <td>91980</td>\n",
-       "      <td>39301</td>\n",
-       "      <td>0.198915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204137</th>\n",
-       "      <td>91980</td>\n",
-       "      <td>39307</td>\n",
-       "      <td>0.202532</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>204138 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        icpsr  member_compare  affinity_score\n",
-       "0       14226           14435        0.305147\n",
-       "1       14226           14858        0.375000\n",
-       "2       14226           14871        0.352941\n",
-       "3       14226           14921        0.772059\n",
-       "4       14226           15015        0.356618\n",
-       "...       ...             ...             ...\n",
-       "204133  91980           31101        0.202532\n",
-       "204134  91980           31102        0.830018\n",
-       "204135  91980           31103        0.169982\n",
-       "204136  91980           39301        0.198915\n",
-       "204137  91980           39307        0.202532\n",
-       "\n",
-       "[204138 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "votesim"
    ]
